2015-03-02 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: update the web site URL

	* m4/ofa-compiler.m4: renamed as pwi-compiler.m4

	* All files: remove '$Id$' svn tag (todo #685)

2015-02-21 Pierre Wieser <pwieser@trychlos.org>

	Version 0.34

	* All files: first public release
	see https://github.com/pwieser/openbook