@@ -50,7 +50,7 @@ AC_PROG_MAKE_SET
 
 # Gnome stuff
 GNOME_COMMON_INIT
-OFA_MAINTAINER_CHECK_MODE
+PWI_MAINTAINER_CHECK_MODE
 
 # libtool
 AM_PROG_LIBTOOL
