@@ -4,6 +4,8 @@
 
 	* m4/ofa-compiler.m4: renamed as pwi-compiler.m4
 
+	* m4/ofa-maintainer.m4: renamed as pwi-maintainer.m4
+
 	* All files: remove '$Id$' svn tag (todo #685)
 
 2015-02-21 Pierre Wieser <pwieser@trychlos.org>
